[gd_scene load_steps=13 format=3 uid="uid://cnsnpeh07llg4"]

[ext_resource type="Script" uid="uid://datmil1mvsjtm" path="res://scripts/game/settings.gd" id="1_i1rig"]
[ext_resource type="Texture2D" uid="uid://rqpn6fpmw8l4" path="res://assets/background.png" id="2_qunfc"]
[ext_resource type="FontFile" uid="uid://bql8obr3wlyca" path="res://assets/fonts/GrapeSoda.ttf" id="3_i1rig"]
[ext_resource type="Texture2D" uid="uid://batt2oaeaai0y" path="res://assets/buttons/Contoured Button.png" id="4_xbp8e"]
[ext_resource type="Texture2D" uid="uid://dcbkbvtfq6mqt" path="res://assets/buttons/blue_pressed.png" id="5_mdt47"]
[ext_resource type="Texture2D" uid="uid://c6txu18y4t6cm" path="res://assets/buttons/back.png" id="6_ll5u5"]
[ext_resource type="Texture2D" uid="uid://dwgfd5sopuing" path="res://assets/buttons/back_pressed.png" id="7_xbp8e"]
[ext_resource type="Texture2D" uid="uid://cviv8sh62xb2k" path="res://assets/buttons/sound.png" id="8_ll5u5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5pajh"]
texture = ExtResource("2_qunfc")
modulate_color = Color(0.5409902, 0.5409906, 0.5409904, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xbp8e"]
texture = ExtResource("4_xbp8e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mdt47"]
texture = ExtResource("5_mdt47")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tegjl"]
texture = ExtResource("5_mdt47")

[node name="settings" type="Node2D"]
position = Vector2(328, 451)
script = ExtResource("1_i1rig")

[node name="background" type="Panel" parent="."]
offset_left = -333.0
offset_top = -455.0
offset_right = 831.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5pajh")

[node name="title" type="Label" parent="."]
offset_left = -80.186646
offset_top = -430.0
offset_right = 578.81335
offset_bottom = -259.0
theme_override_colors/font_color = Color(0.003921569, 0.105882354, 0.2627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0.2954394, 0.5307722, 0.922019, 1)
theme_override_constants/line_spacing = 9
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_i1rig")
theme_override_font_sizes/font_size = 170
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.446686
offset_top = -198.56671
offset_right = 162.55331
offset_bottom = -5.6533813
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="fullscreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "
"
theme_override_colors/font_color = Color(0.36705494, 0.58596367, 0.9477045, 1)
theme_override_colors/font_focus_color = Color(0.36862746, 0.58431375, 0.9490196, 1)
theme_override_colors/font_pressed_color = Color(5.776273e-05, 0.0020730977, 0.010612887, 1)
theme_override_colors/font_hover_color = Color(0.00046604555, 0.016746672, 0.07553152, 1)
theme_override_fonts/font = ExtResource("3_i1rig")
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = SubResource("StyleBoxTexture_xbp8e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mdt47")
theme_override_styles/hover = SubResource("StyleBoxTexture_tegjl")
text = "fullscreen"

[node name="window" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "
"
theme_override_colors/font_color = Color(0.36705494, 0.58596367, 0.9477045, 1)
theme_override_colors/font_focus_color = Color(0.36862746, 0.58431375, 0.9490196, 1)
theme_override_colors/font_pressed_color = Color(5.776273e-05, 0.0020730977, 0.010612887, 1)
theme_override_colors/font_hover_color = Color(0.00046604555, 0.016746672, 0.07553152, 1)
theme_override_fonts/font = ExtResource("3_i1rig")
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = SubResource("StyleBoxTexture_xbp8e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mdt47")
theme_override_styles/hover = SubResource("StyleBoxTexture_tegjl")
text = "window"

[node name="back" type="TextureButton" parent="."]
offset_left = -308.84668
offset_top = 99.65997
offset_right = -221.84668
offset_bottom = 191.65997
size_flags_vertical = 3
texture_normal = ExtResource("6_ll5u5")
texture_pressed = ExtResource("7_xbp8e")
texture_hover = ExtResource("7_xbp8e")
ignore_texture_size = true
stretch_mode = 5

[node name="sound" type="TextureButton" parent="."]
offset_left = 306.58032
offset_top = -144.41718
offset_right = 372.09277
offset_bottom = -73.35382
size_flags_vertical = 3
texture_normal = ExtResource("8_ll5u5")
texture_pressed = ExtResource("8_ll5u5")
texture_hover = ExtResource("8_ll5u5")
ignore_texture_size = true
stretch_mode = 5

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(200, 30)
offset_left = 390.2868
offset_top = -135.58478
offset_right = 745.6333
offset_bottom = -76.130035
theme_override_constants/tick_offset = 50
value = 50.0

[connection signal="pressed" from="VBoxContainer/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/window" to="." method="_on_window_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="sound" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
